# figma-mcp-server

./: README.md  pyproject.toml
plugin/: code.js  manifest.json  ui.html
src/figma_mcp_server/: server.py
